# belajar

./: MANIFEST.in  README.md  notes.txt  pyproject.toml  requirements.txt  setup.py  tests.py
belajar/: __init__.py  core.py  preprocessing.py  report_generator.py  utils.py
belajar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
reports/: report_template.qmd
tests/: test_core.py
