
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "belajar"
version = "0.1.1"
description = "Automated ML experiments with clean reporting and interpretability"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "pandas>=1.3,<2.1",
  "numpy>=1.21,<2.0",
  "scikit-learn>=1.1,<1.4",
  "matplotlib>=3.4,<3.9",
  "shap>=0.41,<0.45",
  "xgboost>=1.6,<2.0",
  "catboost>=1.1,<1.4",
  "lightgbm>=3.3,<4.1",
  "tqdm>=4.64"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
